src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Type</label>
        <referenceTo>Account_Type__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountingId__c</fullName>
        <label>Customer AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponse__c</fullName>
        <label>Customer AccountingResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ag_Other_ID__c</fullName>
        <label>Ag/Other ID#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Customer_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Customer Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Vendor_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Vendor Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Spend_per_Order__c</fullName>
        <label>Average Spend per Order</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_County_Parish__c</fullName>
        <label>Billing County/Parish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_GeoLocation__c</fullName>
        <description>This field contains billing address geolocation</description>
        <label>Billing GeoLocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claims_for_Service_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claims for Service Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commissions_not_in_finance_payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commissions not in finance payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Number_Autonum__c</fullName>
        <displayFormat>CTM-{0000000}</displayFormat>
        <label>Customer Number Autonum</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Export_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Export Format</label>
        <referenceTo>GE_File_Config__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drivers_License__c</fullName>
        <label>Drivers License#</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Expiry_Date__c</fullName>
        <label>Drivers License Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Finance_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financing Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flooring_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flooring Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formatted_Home_number__c</fullName>
        <formula>IF(Home_Number__c != null, 
IF( BillingCountry != null , 
IF(BillingCountry == &apos;Australia&apos;, 
CASE( LEN(Home_Number__c) , 
8 , MID(Home_Number__c, 0, 4) + &quot; &quot; +MID(Home_Number__c, 5, 4) , 
10 , IF(BEGINS(Home_Number__c, &apos;04&apos;) || BEGINS(Home_Number__c, &apos;05&apos;) , 
MID(Home_Number__c, 0, 4) + &quot; &quot; +MID(Home_Number__c, 5, 3)+ &quot; &quot; +MID(Home_Number__c, 8, 3), 
MID(Home_Number__c, 0, 2) + &quot; &quot; +MID(Home_Number__c, 3, 4)+ &quot; &quot; +MID(Home_Number__c, 7, 4)) 
, Home_Number__c ), 


CASE( LEN(Home_Number__c) , 10, &quot;(&quot; + MID(Home_Number__c, 0, 3) + &quot;) &quot; +MID(Home_Number__c, 4, 3) 
+ &quot;-&quot; +MID(Home_Number__c, 7, 4) , Home_Number__c)) 
, 
CASE( LEN(Home_Number__c) , 8 , MID(Home_Number__c, 0, 4) + &quot; &quot; +MID(Home_Number__c, 4, 4) , 
10, &quot;(&quot; + MID(Home_Number__c, 0, 3) + &quot;) &quot; +MID(Home_Number__c, 4, 3) 
+ &quot;-&quot; +MID(Home_Number__c, 7, 4) , Home_Number__c)), 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Home number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Mobile_Number__c</fullName>
        <formula>IF(Mobile__c != null, 
IF( BillingCountry != null , 
IF(BillingCountry == &apos;Australia&apos;, 
CASE( LEN(Mobile__c) , 
8 , MID(Mobile__c, 0, 4) + &quot; &quot; +MID(Mobile__c, 5, 4) , 
10 , IF(BEGINS(Mobile__c, &apos;04&apos;) || BEGINS(Mobile__c, &apos;05&apos;) , 
MID(Mobile__c, 0, 4) + &quot; &quot; +MID(Mobile__c, 5, 3)+ &quot; &quot; +MID(Mobile__c, 8, 3), 
MID(Mobile__c, 0, 2) + &quot; &quot; +MID(Mobile__c, 3, 4)+ &quot; &quot; +MID(Mobile__c, 7, 4)) 
, Mobile__c ), 


CASE( LEN(Mobile__c) , 10, &quot;(&quot; + MID(Mobile__c, 0, 3) + &quot;) &quot; +MID(Mobile__c, 4, 3) 
+ &quot;-&quot; +MID(Mobile__c, 7, 4) , Mobile__c)) 
, 
CASE( LEN(Mobile__c) , 8 , MID(Mobile__c, 0, 4) + &quot; &quot; +MID(Mobile__c, 4, 4) , 
10, &quot;(&quot; + MID(Mobile__c, 0, 3) + &quot;) &quot; +MID(Mobile__c, 4, 3) 
+ &quot;-&quot; +MID(Mobile__c, 7, 4) , Mobile__c)), 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Mobile Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Preferred_Phone__c</fullName>
        <formula>IF(Preferred_Phone__c != null, 
IF( BillingCountry != null , 
IF(BillingCountry == &apos;Australia&apos;, 
CASE( LEN(Preferred_Phone__c) , 
8 , MID(Preferred_Phone__c, 0, 4) + &quot; &quot; +MID(Preferred_Phone__c, 5, 4) , 
10 , IF(BEGINS(Preferred_Phone__c, &apos;04&apos;) || BEGINS(Preferred_Phone__c, &apos;05&apos;) , 
MID(Preferred_Phone__c, 0, 4) + &quot; &quot; +MID(Preferred_Phone__c, 5, 3)+ &quot; &quot; +MID(Preferred_Phone__c, 8, 3), 
MID(Preferred_Phone__c, 0, 2) + &quot; &quot; +MID(Preferred_Phone__c, 3, 4)+ &quot; &quot; +MID(Preferred_Phone__c, 7, 4)) 
, Preferred_Phone__c ), 


CASE( LEN(Preferred_Phone__c) , 10, &quot;(&quot; + MID(Preferred_Phone__c, 0, 3) + &quot;) &quot; +MID(Preferred_Phone__c, 4, 3) 
+ &quot;-&quot; +MID(Preferred_Phone__c, 7, 4) , Preferred_Phone__c)) 
, 
CASE( LEN(Preferred_Phone__c) , 8 , MID(Preferred_Phone__c, 0, 4) + &quot; &quot; +MID(Preferred_Phone__c, 4, 4) , 
10, &quot;(&quot; + MID(Preferred_Phone__c, 0, 3) + &quot;) &quot; +MID(Preferred_Phone__c, 4, 3) 
+ &quot;-&quot; +MID(Preferred_Phone__c, 7, 4) , Preferred_Phone__c)), 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Preferred Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Preferred_SMS__c</fullName>
        <formula>IF(Preferred_SMS__c != null, 
IF( BillingCountry != null , 
IF(BillingCountry == &apos;Australia&apos;, 
CASE( LEN(Preferred_SMS__c) , 
8 , MID(Preferred_SMS__c, 0, 4) + &quot; &quot; +MID(Preferred_SMS__c, 5, 4) , 
10 , IF(BEGINS(Preferred_SMS__c, &apos;04&apos;) || BEGINS(Preferred_SMS__c, &apos;05&apos;) , 
MID(Preferred_SMS__c, 0, 4) + &quot; &quot; +MID(Preferred_SMS__c, 5, 3)+ &quot; &quot; +MID(Preferred_SMS__c, 8, 3), 
MID(Preferred_SMS__c, 0, 2) + &quot; &quot; +MID(Preferred_SMS__c, 3, 4)+ &quot; &quot; +MID(Preferred_SMS__c, 7, 4)) 
, Preferred_SMS__c ), 


CASE( LEN(Preferred_SMS__c) , 10, &quot;(&quot; + MID(Preferred_SMS__c, 0, 3) + &quot;) &quot; +MID(Preferred_SMS__c, 4, 3) 
+ &quot;-&quot; +MID(Preferred_SMS__c, 7, 4) , Preferred_SMS__c)) 
, 
CASE( LEN(Preferred_SMS__c) , 8 , MID(Preferred_SMS__c, 0, 4) + &quot; &quot; +MID(Preferred_SMS__c, 4, 4) , 
10, &quot;(&quot; + MID(Preferred_SMS__c, 0, 3) + &quot;) &quot; +MID(Preferred_SMS__c, 4, 3) 
+ &quot;-&quot; +MID(Preferred_SMS__c, 7, 4) , Preferred_SMS__c)), 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Preferred SMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Work_Number__c</fullName>
        <formula>IF(Work_Number__c != null, 
IF( BillingCountry != null , 
IF(BillingCountry == &apos;Australia&apos;, 
CASE( LEN(Work_Number__c) , 
8 , MID(Work_Number__c, 0, 4) + &quot; &quot; +MID(Work_Number__c, 5, 4) , 
10 , IF(BEGINS(Work_Number__c, &apos;04&apos;) || BEGINS(Work_Number__c, &apos;05&apos;) , 
MID(Work_Number__c, 0, 4) + &quot; &quot; +MID(Work_Number__c, 5, 3)+ &quot; &quot; +MID(Work_Number__c, 8, 3), 
MID(Work_Number__c, 0, 2) + &quot; &quot; +MID(Work_Number__c, 3, 4)+ &quot; &quot; +MID(Work_Number__c, 7, 4)) 
, Work_Number__c ), 


CASE( LEN(Work_Number__c) , 10, &quot;(&quot; + MID(Work_Number__c, 0, 3) + &quot;) &quot; +MID(Work_Number__c, 4, 3) 
+ &quot;-&quot; +MID(Work_Number__c, 7, 4) , Work_Number__c)) 
, 
CASE( LEN(Work_Number__c) , 8 , MID(Work_Number__c, 0, 4) + &quot; &quot; +MID(Work_Number__c, 4, 4) , 
10, &quot;(&quot; + MID(Work_Number__c, 0, 3) + &quot;) &quot; +MID(Work_Number__c, 4, 3) 
+ &quot;-&quot; +MID(Work_Number__c, 7, 4) , Work_Number__c)), 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Work Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Number_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Number SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Number__c</fullName>
        <label>Home Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Id_Number__c</fullName>
        <formula>IF( Is_Customer__c , Customer_Number__c , Vendor_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Calculate_Part_Retail_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Calculate Part Retail Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Foreign_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Foreign Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Used_For_Accouting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Used For Accouting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labour_Category_Default__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Labour Category Default</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Accounts (Labour Category Default)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Visit_Order__c</fullName>
        <label>Last Visit Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Merchandise_Category_Default__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchandise Category Default</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Accounts (Merchandise Category Default)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchandise_Purchases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merchandise Purchases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Number SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Other Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>Nick Name of Customer</description>
        <label>Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>General customer notes</description>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Orders__c</fullName>
        <label>Open Orders</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Lifetime__c</fullName>
        <label>Orders Lifetime</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Part_Category_Default__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Category Default</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Purchases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Purchases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact__c</fullName>
        <label>Preferred Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_SMS__c</fullName>
        <label>Preferred SMS</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Price_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Level</label>
        <referenceTo>Price_Level__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_AccountingId__c</fullName>
        <label>Provider Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_AccountingLastSyncTime__c</fullName>
        <label>Provider Accounting Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Provider_AccountingResponse__c</fullName>
        <label>Provider Accounting Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_AvailForQBSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Available for QB Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_SyncToken__c</fullName>
        <label>Provider Sync Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Accounts (Purchase Tax)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QB_Updated_Fields__c</fullName>
        <label>QB Updated Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Co-Worker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Base_Value__c</fullName>
        <defaultValue>&quot;MSRP&quot;</defaultValue>
        <label>Retail Base Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MSRP</fullName>
                </value>
                <value>
                    <fullName>Item Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retail Rate</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retail_Round_To__c</fullName>
        <defaultValue>95</defaultValue>
        <label>Retail Round To</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Rounding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Rounding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_same_as_BA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shipping Address same as Billing Address</description>
        <label>SA same as BA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Tags__c</fullName>
        <label>Search Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_County_Parish__c</fullName>
        <label>Shipping County/Parish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_GeoLocation__c</fullName>
        <label>Shipping GeoLocation</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Shopify_ID__c</fullName>
        <description>This field is used to store the Shopify ID of the customer.</description>
        <label>Shopify ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopify_URL__c</fullName>
        <formula>$Setup.Shopify_Configuration__c.Customer_Base_URL__c + Shopify_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shopify URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( Active__c = TRUE, &apos;Active&apos; , &apos;InActive&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>IF( AND(ISPICKVAL( Type__c , &quot;Individual&quot;), NOT( ISNULL(Email__c) ) ) , Email__c ,  (IF(AND(ISPICKVAL( Type__c , &quot;Business&quot;), NOT( ISNULL(Work_Email__c ) ) ), Work_Email__c , Other_Email__c)) )</formula>
        <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>IF( ISPICKVAL( Type__c , &quot;Individual&quot;) , Home_Number__c , Work_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sublet_Purchases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sublet Purchases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <label>Customer SyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Store_Credit__c</fullName>
        <label>Total Store Credit</label>
        <summarizedField>Store_Credit__c.Amount__c</summarizedField>
        <summaryForeignKey>Store_Credit__c.Customer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Category_Default__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Category Default</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Accounts (Unit Category Default)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Purchases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unit Purchases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <label>VIP#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Account_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Account Type</label>
        <referenceTo>Account_Type__c</referenceTo>
        <relationshipLabel>Accounts (Vendor Account Type)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_AccountingId__c</fullName>
        <label>Vendor AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_AccountingLastSyncTime__c</fullName>
        <label>Vendor AccountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vendor_AccountingResponse__c</fullName>
        <label>Vendor AccountingResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_AvailForQBSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor AvailForQBSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Count__c</fullName>
        <label>Vendor Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_Number_Count__c</fullName>
        <label>Vendor Number Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_QB_Updated_Fields__c</fullName>
        <description>This field is used to store the updated fields string separated by comma. All fields that need to be sync on the subsequent qb sync request are pushed into this string.</description>
        <label>Vendor QB Updated Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_SyncToken__c</fullName>
        <label>Vendor SyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Tax_Id__c</fullName>
        <label>Vendor Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Plan_Sales_on_Unit_Deals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Work_Number_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Number SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Number__c</fullName>
        <label>Work Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Xero_Customer_Accounting_Id__c</fullName>
        <label>Xero Customer Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Vendor_Accounting_Id__c</fullName>
        <label>Xero Vendor Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <label>Customer AccountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer availForQBSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Charge_On_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field limit the use of the Charge on Account payment method</description>
        <inlineHelpText>This field limit the use of the Charge on Account payment method</inlineHelpText>
        <label>Allow Charge On Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Vendor_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Work_Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>availForQBSync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Customers</label>
    </listViews>
</CustomObject>